# leoborai.com

./: Cargo.toml  Justfile  package.json
.github/workflows/: deploy-staging.yml  deploy.yml
crates/cli/: Cargo.toml
crates/cli/src/: notes.rs  notes_index.rs
crates/notes/: Cargo.toml
crates/proto/: Cargo.toml
crates/www/: Cargo.toml
crates/www/assets/db/: projects.json
crates/www/assets/notes/: docker-postgresql-restore-database.md  installing-the-rust-programming-language-on-windows.md  introduction-to-git.md  keychron-firmware-update-launcher.md  setup-poetry-development-environment-osx.md  sveltekit-pwa.md
crates/www/src/: lib.rs
crates/www/src/components/atoms/: section.rs
crates/www/src/components/atoms/icons/: briefcase.rs  github.rs  globe.rs
crates/www/src/routes/: bookshelf.rs  home.rs  projects.rs
crates/www/src/routes/notes/: mod.rs  slug.rs
src/: app.css  app.d.ts  app.html
src/lib/services/: GitHub.ts
src/lib/stores/: uiStore.ts
src/lib/utils/: config.ts
src/notes/: docker-claude.svx  http-server-with-rust.svx  installing-the-rust-programming-language-on-windows.svx  keychron-firmware-update-launcher.svx  moving-into-orbstack.svx  one-way-to-build-your-graphql-server-with-typescript.svx  sandbox-claude-code.svx  uploading-files-to-graphql-server-with-urql.svx  use-zed-as-ide-for-java-on-macos.svx  writing-e2e-tests-for-axum-and-graphql.svx  you-can-ask-ai-about-people.svx
src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
src/routes/bio/: +page.svelte
static/notes/: index.json
(+23 files in other folders)
