[package]
name = "leoborai-dotcom"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "app"
path = "src/lib.rs"

[[bin]]
name = "www"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
leptos = { workspace = true, features = ["csr"] }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
log = { workspace = true }
pulldown-cmark = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
yaml-front-matter = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["Window"] }

# Local
proto = { path = "../proto" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
